# beanhub-import

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  CHANGELOG.md  LICENSE  README.md  beancount-import.schema.json  justfile  mkdocs.yml  netlify.toml  pyproject.toml  release-please-config.json  schema-import.json  schema.json  setup.cfg
.circleci/: config.yml
.github/actions/setup-dependencies/: action.yml
.github/workflows/: dependabot.yml  pr-title.yml  pr.yml  release.yml
beancount_importer_rules/: aliase.py  cli.py  constants.py  data_types.py  engine.py  environment.py  extractor.py  includes.py  post_processor.py  processor.py  templates.py  utils.py
beanhub_import/: constants.py  data_types.py  post_processor.py  processor.py
docs/: api.md  configuration.md  how-it-work,md  index.md  mkdocs.yml  omit-fields.md  transaction-ids.md
docs/docs/: how-it-works.md  index.md  override-flags.md
docs/docs/how-it-works/: data-flow.md  unique-import-id.md
docs/docs/scheme/: context.md  import-doc.md  input-config.md
docs/docs/scheme/import-config/: actions.md  basic-match.md  import-config.md  match-with-vars.md  omit.md
docs/docs/scheme/input-config/: config.md  extra-attrs.md  filter.md  input-config.md  loop.md  match.md
docs/overrides/: main.html
docs/overrides/partials/integrations/analytics/: custom.html
scripts/: anonymize_plaid_csv.py  print_benchmark_results.py
tests/: conftest.py  test_engine.py  test_post_processor.py  test_processor.py
tests/benchmark/: conftest.py  test_process_imports_benchmark.py
tests/fixtures/engine/: import.yaml
tests/fixtures/engine/books/: 2024.bean  accounts.bean  imported.2023.bean  main.bean
tests/fixtures/engine/rules/: fees.yml  uknown.yml
tests/fixtures/importer/: mercury.py
tests/fixtures/integration/: import.yaml  output.bean  simple.bean
tests/fixtures/integration/importer/: agrimaster_csv.py
tests/fixtures/integration/imports/: mercury.csv
tests/fixtures/post_processor/apply-changes/: simple-expected.bean  simple.bean
tests/fixtures/post_processor/simple-transactions/: accounts.bean  main.bean
tests/fixtures/post_processor/simple-transactions/books/: 2024.bean  2025.bean
tests/fixtures/processor/auto-detect/: import.yaml  mercury.csv
tests/fixtures/processor/extra-attrs/: import.yaml
tests/fixtures/processor/extra-attrs/chase/: 2024.csv
tests/fixtures/processor/extra-attrs/mercury/: 2024.csv
tests/fixtures/processor/extra-attrs/other/: 2024.csv
tests/fixtures/processor/input-filter/: import.yaml  mercury.csv
tests/fixtures/processor/input-loop/: import.yaml
tests/fixtures/processor/input-loop-filter/: import.yaml
tests/fixtures/processor/regex-name-group/: import.yaml
tests/fixtures/processor/simple/: import.yaml  mercury.csv
tests/fixtures/processor/simple-mercury/: import.yaml
tests/fixtures/simple-mercury/: import.yaml
