[project]
name = "beancount-importer-rules"
version = "0.1.2"
description = "Beancount importer rules engine"
authors = [
    { name = "Zeno Jiricek", email = "airtonix@users.noreply.github.com" },
]
dependencies = [
    "beancount-parser>=1.2.3",
    "beancount-black>=1.0.4",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "pydantic>=2.8.2",
    "pytz>=2024.1",
    "click>=8.1.7",
    "rich>=13.8.0",
    "pendulum>=3.0.0",
    "types-PyYAML>=6.0.12.20240808",
    "types-Pygments>=2.18.0.20240506",
    "types-regex>=2024.7.24.20240726",
    "arrow>=1.3.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
scripts = { beancount-import = "beancount_importer_rules.cli:cli" }

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "rich>=13.8.0",
    "beancount==2.3.6",
    "pylance>=0.16.1",
    "ruff>=0.6.2",
    "pytest-md-report>=0.6.2",
    "mypy>=1.11.2",
    "pyright>=1.1.378",
    "pre-commit>=3.8.0",
]

[tool.pdm.build]
includes = [
    "beancount_importer_rules",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
