[project]
name = "beanhub-import"
version = "1.1.0"
description = "The simple library for import extracted transactions provided by beanhub-extract and generate corresponding Beancount transactions based on predefined rules"
authors = [{ name = "Fang-Pen Lin", email = "fangpen@launchplatform.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "pytz>=2023.1,<2025",
    "pydantic>= 2.0.0, <3.0.0",
    "pyyaml>=6.0.1,<7",
    "jinja2>=3.1.6,<4",
    "beanhub-extract>= 0.1.0, <0.2.0",
    "beancount-black>= 1.0.2, < 1.1.0",
    "beancount-parser>= 1.2.3, < 1.3.0",
]

[project.urls]
Documentation = "https://beanhub-import-docs.beanhub.io"

[dependency-groups]
dev = [
    "pytest>=7.4.1,<8",
    "pytest-mock>=3.11.1,<4",
    "mkdocs-material>=9.5.35,<10",
    "mkdocs>=1.6.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
